# OpenVLA_TEST

./: 260723_VLA현황.md  README.md  명령어모음.md
vla_data_collector/: README.md  package.xml  setup.cfg  setup.py
vla_data_collector/config/: collector.yaml
vla_data_collector/raw_dataset/episode_000002/: metadata.json  steps.jsonl  steps_with_actions.jsonl
vla_data_collector/vla_data_collector/: dataset_recorder.py  doosan_interface.py  gripper_interface.py  make_actions.py  validate_episode.py  waypoint_recorder.py
