<?xml version="1.0"?>
<package format="3">
  <name>vla_data_collector</name>
  <version>0.1.0</version>
  <description>OpenVLA data collection for Doosan A0509 and ZED 2i</description>

  <maintainer email="heejun@example.com">juhun</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>dsr_msgs2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
